More refactoring.